--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -57,4 +57,4 @@ jobs:
         with:
           version: v1.50.0
           args: --timeout=5m
-          only-new-issues: true
+          only-new-issues: false
