--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -56,5 +56,5 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.50.0
-          args: --timeout=5m
+          args: --timeout=60m -v
           only-new-issues: false
