--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,7 +4,7 @@
 # options for analysis running
 run:
   # timeout for analysis, e.g. 30s, 5m, default is 1m
-  timeout: 5m
+  timeout: 60m
 
   # include test files or not, default is true
   tests: false
@@ -26,31 +26,6 @@ linters-settings:
     check-shadowing: false
 
 linters:
-  enable:
-    # mandatory linters
-    - govet
-    - revive
-
-    # some default golangci-lint linters
-    - errcheck
-    - gosimple
-    - godot
-    - ineffassign
-    - staticcheck
-    - typecheck
-    - unused
-
-    # extra linters
-    - bidichk
-    - durationcheck
-    - exhaustive
-    - exportloopref
-    - gofmt
-    - goimports
-    - misspell
-    - predeclared
-    - reassign
-    - whitespace
-  disable-all: true
+  enable-all: true
   fast: false
 
