--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -45,8 +45,22 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: bash <(curl -s https://codecov.io/bash)
 
-  lint:
+  lint2004:
     runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+      - uses: actions/checkout@v3
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.50.0
+          args: --timeout=60m -v
+          only-new-issues: false
+
+  lint2204:
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/setup-go@v3
         with:
